tdf#160373: Iterate over all parents to check whether it's a clipPath content

Change-Id: I383ec264e4c88ebcee2ae6a839b762bba8abfc12
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165347
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 261985b6936ede212852e806c4b140ea634a5af3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165317
Reviewed-by: Stéphane Guillou <stephane.guillou@libreoffice.org>